--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"bridge_1": {
-		"bridge_ip": "BRIDGE_IP",
-		"username": "USERNAME"
+		"bridge_ip": "192.168.2.108",
+		"username": "UZNT4nJfPTh6BqQILPw8i8qFvB6hs-gOS21WeSCK"
 	}
 }
